styles/main.css
/* CSS presets */
* {
  border: 0;
  margin: 0;
  padding: 0;
  font: inherit;
  color: inherit;
  background: transparent;
}

/* Clearfix */
.group:after {
  content: "";
  clear: both;
  display: block;
}

.container {
  height: 100vh;
  position: relative;
}

nav {
  height: 60px;
  background-color: #ffffff;
}

.nav-inner {
  width: 1170px;
  margin: auto;
}

.logo {
  float: left;
  padding: 17.2px 65.5px 19.3px 0;
}

.nav-tabs {
  list-style: none;
  float: left;
  border-left: 1px solid #dddddd;
}

.nav-tab {
  float: left;
  padding: 22px 23.5px;
  font-family: HelveticaNeue;
	font-size: 14px;
	color: #00a4c7;
  border-right: 1px solid #dddddd;
}

.nav-tab:hover {
  cursor: pointer;
  background-color: #f7f7f7;
}

.nav-tab.selected {
  padding: 20px 23.5px;
  color: #333333;
  background-color: #f7f7f7;
  border-top: 4px solid #333333;
}

.nav-links {
  float: right;
  width: 98px;
	height: 16px;
	font-family: HelveticaNeue;
	font-size: 13px;
	text-align: right;
	color: #777777;
  padding-top: 13px;
  padding-bottom: 31px;
}

.user {
  float: right;
}

.user-name {
  float: left;
  width: 68px;
  height: 16px;
  font-family: HelveticaNeue;
  font-size: 13px;
  text-align: right;
  color: #777777;
  padding: 13px 8px 31px 32px;
}

.user-icon {
  float: left;
  padding-bottom: 34px;
  padding-top: 17px;
}

.user-icon:hover {
  cursor: pointer;
}

.spacer {
  height: 40px;
  background-color: #333333;
	box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.3);
  font-family: HelveticaNeue;
	font-size: 20px;
	letter-spacing: -0.1px;
	color: #ffffff;
}

.spacer-inner {
  width: 1170px;
  margin: auto;
}

.spacer-inner {
  padding: 6px 0 9px 0;
}

.main {
  min-height: calc(100% - 169px);
  min-height: -o-calc(100% - 169px); /* opera */
  min-height: -webkit-calc(100% - 169px); /* google, safari */
  min-height: -moz-calc(100% - 169px); /* firefox */
  background-color: #f7f7f7;
  padding-bottom: 62px;
}

.main-header {
  width: 1170px;
  margin: auto;
}

.dashboard-title {
  float: left;
}

.dashboard-title h1 {
  float: left;
  font-family: HelveticaNeue;
	font-size: 24px;
	letter-spacing: -0.1px;
	color: #333333;
  margin-top: 47px;
  margin-right: 10px;
}

.dashboard-title form {
  float: left;
  margin-top: 45px;
  margin-right: 10px;
}

.dashboard-title input {
  width: 230px;
  padding: 2px 5px;
  border: 1px solid #bbbbbb;
  border-radius: 3px;
  font-family: HelveticaNeue;
	font-size: 24px;
	letter-spacing: -0.1px;
	color: #333333;
}

.dashboard-title img {
  float: left;
  margin-top: 51px;
}

.dashboard-title img:hover {
  cursor: pointer;
}

.dashboard-controls {
  float: right;
}

.dashboard-controls p {
  font-family: HelveticaNeue-Bold;
	font-size: 12px;
	letter-spacing: -0.1px;
	color: #333333;
}

.dashboard-switcher {
  float: left;
  margin-right: 22px;
  margin-top: 18px;
}

.dashboard-switcher:hover {
  cursor: pointer;
}

.dashboard-select {
  width: 200px;
	height: 30px;
	border-radius: 3px;
	background-color: #ffffff;
	border: solid 1px #bbbbbb;
  margin-top: 7px;
}

.dashboard-select-option {
  float: left;
  font-family: HelveticaNeue;
	font-size: 14px;
	letter-spacing: -0.1px;
	color: #555555;
  margin-top: 7px;
  margin-left: 9px;
  max-width: 150px;
  overflow: hidden;
}

.dashboard-select img {
  float: right;
  margin-top: 10px;
  margin-right: 9px;
}

.new-widget-button {
  margin-top: 39px;
  float: left;
  width: 188px;
	height: 30px;
	border-radius: 3px;
	background-color: #ffffff;
	border: solid 1px #bbbbbb;
  font-family: HelveticaNeue-Bold;
	font-size: 14px;
	color: #333333;
}

.new-widget-button:hover {
  background-color: #E0E0E0;
  cursor: pointer;
}

.new-widget-button-icon {
  float: left;
  padding: 6px 8px;
  border-right: 1px solid #bbbbbb;
}

.new-widget-button-text {
  text-align: center;
  line-height: 30px;
}

.rule {
  width: 1170px;
	height: 4px;
	background-color: #333333;
  margin: 21px auto 32px auto;
}

.new-widget {
  float: left;
  width: 168px;
	height: 168px;
	background-color: #ffffff;
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.45);
	border: solid 1px #cccccc;
  font-family: HelveticaNeue-Bold;
	font-size: 14px;
	text-align: center;
	color: #333333;
}

.new-widget:hover {
  background-color: #E0E0E0;
  cursor: pointer;
}

.new-widget img {
  margin: 31.9px 49px 19.9px 49px;
}

.footer {
  padding: 0 65px;
  background-color: #f7f7f7;
}

.copyright {
  border-top
  padding-top: 15px;
  padding-bottom: 42px;
  font-family: HelveticaNeue;
	font-size: 11px;
	color: #777777;
  border-top: 1px solid #dddddd;
  padding-top: 15px;
}

/* Panel */

#panel {
  display: none;
  z-index: 999;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color:
  /*overflow-y: hidden;*/
  min-height: 750px;
  background-color: #ffffff;
	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
	border: solid 1px #cccccc;
}

.panel-header {
  height: 60px;
	background-color: #333333;
  font-family: HelveticaNeue-Bold;
	font-size: 20px;
	letter-spacing: -0.1px;
	color: #ffffff;
}

.panel-header-inner {
  width: 1170px;
  margin: auto;
}

.panel-heading {
  float: left;
  margin-top: 17px;
}

.panel-header img {
  float: right;
  margin-top: 15px;
}

.panel-header img:hover {
  cursor: pointer;
}

.panel-main {
  padding-bottom: 69px;
}

.panel-main-inner {
  width: 1170px;
  margin: auto;
}

.panel-type-selection {
  border-bottom: solid 1px #dddddd;
}

.panel-type-selection p {
  font-family: HelveticaNeue;
	font-size: 16px;
	letter-spacing: -0.1px;
	color: #333333;
  margin-top: 30px;
  margin-bottom: 21px;
}

.widget-type {
  float: left;
  width: 266px;
	height: 200px;
	background-color: #f7f7f7;
	border: solid 1px #dddddd;
  margin-right: 30px;
  margin-bottom: 32px;
  text-align: center;
}

.widget-type:first-child:hover {
  border: 4px solid #00a4c7;
  cursor: pointer;
}

.widget-type:last-child {
  margin-right: 0;
}

.widget-type.type-selected {
  border: 4px solid #00a4c7;
}

.widget-type img {
  margin-top: 15px;
  margin-bottom: 15.2px;
}

.widget-name {
  padding-top: 11.6px;
  padding-bottom: 11.6px;
  font-family: HelveticaNeue;
	font-size: 14px;
	letter-spacing: -0.1px;
	text-align: center;
	color: #333333;
  border-bottom: 1px solid #dddddd;
}

.widget-sizes {
  list-style: none;
  border-top: 1px solid #dddddd;
}

.widget-sizes li {
  width: 88px;
  padding-top: 11px;
  padding-bottom: 11px;
  float: left;
  font-family: HelveticaNeue;
	font-size: 12px;
	letter-spacing: -0.1px;
	text-align: center;
	color: #00a4c7;
  border-right: 1px solid #dddddd;
}

.widget-size li:hover {
  background-color: #cccccc;
}

.widget-sizes li:last-child {
  border-right: 0px;
}

.widget-sizes li.size-selected {
  background-color: #E0E0E0;
}

.dashboard-header-selection {
  padding-top: 28px;
  padding-bottom: 31px;
  border-bottom: 1px solid #dddddd;
}

.dashboard-header-selection p {
  font-family: HelveticaNeue;
	font-size: 16px;
	letter-spacing: -0.1px;
	color: #333333;
  margin-bottom: 18px;
}

.dashboard-header-selection-label {
  font-family: HelveticaNeue;
	font-size: 12px;
	letter-spacing: -0.1px;
	color: #333333;
  margin-bottom: 10px;
}

.dashboard-header-selection-label strong {
  font-family: HelveticaNeue-Bold;
}

.dashboard-header-selection label {
  display: block;
}

.dashboard-header-selection input, .dashboard-header-selection textarea {
  width: 258px;
  padding-left: 5px;
  padding-right: 5px;
	border-radius: 3px;
	background-color: #ffffff;
	border: solid 1px #bbbbbb;
  text-align: left;
}

.dashboard-header-selection input {
  height: 30px;
  margin-bottom: 18px;
  font-family: HelveticaNeue;
  font-size: 12px;
}

.dashboard-header-selection textarea {
  height: 53px;
  resize: none;
  padding-top: 7px;
  padding-bottom: 7px;
  font-family: HelveticaNeue;
  font-size: 12px;
}

.panel-options {
  padding-top: 31px;
}

.panel-options button {
  width: 120px;
	height: 30px;
	border-radius: 3px;
	background-color: #ffffff;
	border: solid 1px #bbbbbb;
  font-family: HelveticaNeue-Bold;
	font-size: 14px;
	text-align: center;
	color: #333333;
  margin-right: 30px;
}

.panel-options button:hover {
  cursor: pointer;
  background-color: #f7f7f7;
}

.cancel {
  font-family: HelveticaNeue;
	font-size: 14px;
	color: #777777;
  text-decoration: underline;
  display: inline-block;
}

.cancel:hover {
  cursor: pointer;
}

.error {
  font-family: HelveticaNeue;
	font-size: 14px;
  color: #FF0000;
  margin-bottom: 5px;
}

.error:last-child {
  margin-bottom: 15px;
}

/* Widgets */

.widgets {
  max-width: 1170px;
  margin: auto;
}

.widget {
  display: inline-block;
  float: left;
  margin-right: 10px;
  margin-bottom: 30px;
}

/* Tables */

.table {
  display: inline-block;
}

.table-header {
  padding-left: 20px;
  padding-bottom: 12px;
}

.col {
  float: left;
}

.cell {
  padding-left: 20px;
  line-height: 49px;
  border-top: 1px solid #cccccc;
  font-family: HelveticaNeue;
	font-size: 14px;
	color: #808080;
}

.col-headers, .table-rows, .row {
  list-style: none;
}

.col-header {
  font-family: HelveticaNeue-Bold;
	font-size: 14px;
	color: #333333;
}

.col-header-first {
  margin-right: 10px;
  float: left;
}

.col-header-first-icon {
  float: left;
  margin-top: 20px;
}

.table-info {
  float: left;
}

.table-icons {
  float: right;
  margin-top: 10px;
  margin-right: 10px;
}

.table-icon-settings {
  margin-right: 15px;
}

.table-name {
  font-family: HelveticaNeue;
	font-size: 20px;
	letter-spacing: -0.1px;
	color: #333333;
  margin-top: 14px;
  margin-bottom: 5px;
}

.table-name.short {
  max-width: 270px;
  overflow: hidden;
}

.table-description {
  font-family: HelveticaNeue;
	font-size: 12px;
	letter-spacing: -0.1px;
	color: #A9A9A9;
}

.table-description.short {
  max-width: 270px;
  overflow: hidden;
}

.info-blank {
  visibility: hidden;
}

/* small table */

.table.small {
  width: 370px;
  height: 370px;
  background-color: #ffffff;
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.45);
	border: solid 1px #cccccc;
}

.col-1-small {
  width: 174px;
  border-right: 1px solid #cccccc;
}

.col-2-small {
  width: 195px;
}

/* medium table */

.table.medium {
  width: 770px;
  height: 370px;
  background-color: #ffffff;
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.45);
	border: solid 1px #cccccc;
}

.col-1-medium {
  width: 174px;
  border-right: 1px solid #cccccc;
}

.col-2-medium {
  width: 183px;
  border-right: 1px solid #cccccc;
}

.col-3-medium {
  width: 122px;
  border-right: 1px solid #cccccc;
}

.col-4-medium {
  width: 288px;
}

/* large table */

.table.large {
  width: 1170px;
  height: 370px;
  background-color: #ffffff;
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.45);
	border: solid 1px #cccccc;
}

.col-1-large {
  width: 174px;
  border-right: 1px solid #cccccc;
}

.col-2-large {
  width: 244px;
  border-right: 1px solid #cccccc;
}

.col-3-large {
  width: 244px;
  border-right: 1px solid #cccccc;
}

.col-4-large {
  width: 245px;
  border-right: 1px solid #cccccc;
}

.col-5-large {
  width: 259px;
}

